--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
 name = "cadical-sys"
+description = "Unsafe system-level automatically generated bindings to the CaDiCaL SAT solver using bindgen."
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
 
 [build-dependencies]
 bindgen = "0.70.1"
+cc = { version = "1.1.31", features = ["parallel"] }
