--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,11 @@ version = "0.1.0"
 edition = "2021"
 license = "MIT"
 links = "cadical"
+repository = "https://github.com/sirandreww/cadical-sys.git"
+authors = ["Andrew Luka"]
+categories = ["system-programming", "development-tools", "SAT-solver"]
+keywords = ["cadical", "sat-solver", "bindings", "system-level", "safe"]
+readme = "README.md"
 
 [dependencies]
 cxx = "1.0"
@@ -13,3 +18,6 @@ cxx = "1.0"
 # bindgen = "0.70.1"
 # cc = { version = "1.1.31", features = ["parallel"] }
 cxx-build = "1.0"
+
+[dev-dependencies]
+rand ="0.8.4"
